--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,3 @@
-pluginGroup=com.ichorpowered.guardian.spigot
-pluginName=guardianspigot
-pluginVersion=1.12-0.2.2-01
-gameVersion=1.12-R0.1-SNAPSHOT
+apiGroup=com.abilityapi.sequenceapi
+apiName=sequenceapi
+apiVersion=1.0.0-SNAPSHOT
